# xrtoolz

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  release-please-config.json
.github/: copilot-instructions.md
.github/instructions/: docs-examples.instructions.md
.github/workflows/: ci.yml  typecheck.yml
api/: index.html
api/atm/: index.html
api/budgets/: index.html
api/calc/: index.html
api/composition/: index.html
api/core/: index.html
api/einx/: index.html
api/encoders/: index.html
api/inference/: index.html
api/interpolate/: index.html
api/metrics/: index.html
api/ocn/: index.html
api/reference/: index.html
api/rs/: index.html
api/transforms/: index.html
api/utils/: index.html
api/validation/: index.html
api/viz/: index.html
changelog/: index.html
contributing/: index.html
dask/: index.html
design/: index.html
design/api/: index.html
design/architecture/: index.html
design/boundaries/: index.html
design/bridges/: index.html
design/decisions/: index.html
design/examples/: index.html
design/ob-1.1-xrpatcher-integration/: index.html
design/ob-1.2-cf-standard-name-rename/: index.html
design/ob-1.3-regions-and-subset/: index.html
design/ob-1.4-class4-profile-validation/: index.html
design/ocean-data-challenges-survey/: index.html
design/oceanbench-survey/: index.html
design/odc-1.1-fir-filters/: index.html
design/odc-1.2-grid-to-points/: index.html
design/odc-1.3-segmented-psd/: index.html
design/odc-1.4-binned-stats-regions/: index.html
design/odc-1.5-regime-bars-rotary/: index.html
design/odc-2.1-rmse-and-psd-spacetime/: index.html
design/odc-2.2-laplacian-gap-fill/: index.html
design/odc-2.3-facet-panel/: index.html
design/odc-3.1-spectral-flux-and-scales/: index.html
design/odc-3.3-lagrangian-reconciliation/: index.html
design/odc-3.4-pairwise-compare-panel/: index.html
design/odc-3.6-animate-panel/: index.html
design/sklearn-integration/: index.html
design/validation/: index.html
design/validation-decisions/: index.html
design/vision/: index.html
design/xarray-native-primitives/: index.html
design_docs/xrtoolz/: README.md
docs/: dask.md  index.md
docs/api/: atm.md  budgets.md  calc.md  composition.md  core.md  einx.md  encoders.md  index.md  inference.md  interpolate.md  metrics.md  ocn.md  reference.md  rs.md  transforms.md  utils.md  validation.md  viz.md
docs/design/: README.md  architecture.md  boundaries.md  decisions.md  ob-1.1-xrpatcher-integration.md  ob-1.2-cf-standard-name-rename.md  ob-1.3-regions-and-subset.md  ob-1.4-class4-profile-validation.md  ocean-data-challenges-survey.md  oceanbench-survey.md  odc-1.1-fir-filters.md  odc-1.2-grid-to-points.md  odc-1.3-segmented-psd.md  odc-1.4-binned-stats-regions.md  odc-1.5-regime-bars-rotary.md  odc-2.1-rmse-and-psd-spacetime.md  odc-2.2-laplacian-gap-fill.md  odc-2.3-facet-panel.md  odc-3.1-spectral-flux-and-scales.md  odc-3.3-lagrangian-reconciliation.md  odc-3.4-pairwise-compare-panel.md  odc-3.6-animate-panel.md  sklearn-integration.md  validation-decisions.md  validation.md  vision.md  xarray-native-primitives.md
docs/notebooks/: aemet_national.ipynb  aemet_smoke.ipynb  aemet_valencia.ipynb  cds_insitu_land_demo.ipynb  cds_insitu_marine_demo.ipynb  cmems_oc_products.ipynb  cmems_ssh_products.ipynb  cmems_sss_products.ipynb  cmems_sst_products.ipynb  inference_modelop_demo.ipynb  nan_aware_smoothing.ipynb  ocean_alongtrack_ssh.ipynb  ocean_kinematics_glorys_duacs.ipynb  ocean_stratification_glorys.ipynb  operators_pipeline_demo.ipynb  sequential_summary_demo.ipynb  sklearn_patchwise_recipe.ipynb  validation_v1_psd_plots.ipynb  validation_v1_scales.ipynb  validation_v2_data_representation.ipynb  validation_v4_process.ipynb  validation_v6_capstone.ipynb
notebooks/aemet_national/: index.html
notebooks/aemet_smoke/: index.html
notebooks/aemet_valencia/: index.html
notebooks/cds_insitu_land_demo/: index.html
notebooks/cds_insitu_marine_demo/: index.html
notebooks/cmems_oc_products/: index.html
notebooks/cmems_ssh_products/: index.html
notebooks/cmems_sss_products/: index.html
notebooks/cmems_sst_products/: index.html
notebooks/example_demo/: index.html
notebooks/inference_modelop_demo/: index.html
notebooks/nan_aware_smoothing/: index.html
notebooks/ocean_alongtrack_ssh/: index.html
notebooks/ocean_kinematics_glorys_duacs/: index.html
notebooks/ocean_stratification_glorys/: index.html
notebooks/operators_pipeline_demo/: index.html
notebooks/sequential_summary_demo/: index.html
notebooks/sklearn_patchwise_recipe/: index.html
notebooks/validation_v1_psd_plots/: index.html
notebooks/validation_v1_scales/: index.html
notebooks/validation_v2_data_representation/: index.html
scripts/: _aemet_common.py  _cds_insitu_common.py  aemet_smoke.py
search/: search_index.json
src/xr_toolz/: __init__.py
tests/: conftest.py  test_combinators.py  test_core.py  test_core_combinators.py  test_dask_compat.py  test_datatree_dispatch.py  test_encoder_imports.py  test_foundations_bundle.py  test_geo.py  test_geo_along_track.py  test_geo_cf_rename.py  test_geo_extended.py  test_geo_operators.py  test_geo_regions.py  test_geo_wavelet.py  test_inference_imports.py  test_inference_jax.py  test_inference_modelop.py  test_inference_sklearn.py  test_interpolate_biharmonic.py  test_interpolate_conservative_coarsen.py  test_interpolate_coord_remap.py  test_interpolate_downscale.py  test_interpolate_gap_fill.py  test_interpolate_grid_to_points.py  test_interpolate_imports.py  test_interpolate_knn.py  test_interpolate_mask_ops.py  test_interpolate_operators.py  test_interpolate_refine_2d.py  test_interpolate_smooth.py  test_kde_to_grid.py  test_metrics_composite.py  test_metrics_frequency_band.py  test_metrics_imports.py  test_metrics_instance.py  test_metrics_odc14.py  test_metrics_pixel_semantics.py  test_metrics_segmented_psd.py  test_metrics_v1_scales.py  (+13 more)
(+396 files in other folders)
