[project]
name = "xr_toolz"
version = "0.0.3"
description = "Composable operator library for geoprocessing Earth System Data Cubes."
authors = [
    {name="J. Emmanuel Johnson", email="jemanjohnson34@gmail.com"},
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["xarray", "earth-science", "geoprocessing", "climate", "oceanography"]
requires-python = ">=3.12"
classifiers = [
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Development Status :: 2 - Pre-Alpha",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "xarray>=2024.2",
    "pandas>=2.1",
    "rioxarray>=0.15",
    "pyproj>=3.6",
    "regionmask>=0.12",
    "xrft>=1.0",
    "xskillscore>=0.0.26",
    "numpy-groupies>=0.11",
    "finitediffx>=0.1.0",
    "scikit-image>=0.22",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
# ``pip install xr_toolz[aemet]`` — runtime deps for the AEMET adapter
# and the GeoParquet-backed archive. ``xr_toolz.data.AemetSource`` and
# ``xr_toolz.data.AemetArchive`` import these lazily and surface a
# pointer to this extra in their ImportError messages.
aemet = [
    "httpx>=0.28.1",
    "geopandas>=1.1.3",
    "pyarrow>=24.0.0",
    "loguru>=0.7.3",
]

# ``pip install xr_toolz[cds-insitu]`` — runtime deps for the CDS
# in-situ surface-land / surface-marine adapters + GeoParquet archive.
# ``xr_toolz.data.CDSSource`` falls back to no-extras usage for the
# gridded reanalysis datasets (cdsapi only).
cds-insitu = [
    "cdsapi>=0.7",
    "geopandas>=1.1.3",
    "pyarrow>=24.0.0",
    "loguru>=0.7.3",
]

# ``pip install xr_toolz[wavelets]`` — PyWavelets backend for the
# continuous + discrete wavelet transforms in
# :mod:`xr_toolz.transforms.wavelet`. Imported lazily; missing the extra
# only breaks ``cwt`` / ``dwt``, not the rest of the transforms module.
wavelets = [
    "PyWavelets>=1.4",
]

[project.urls]
Repository = "https://github.com/jejjohnson/xr_toolz"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pre-commit>=4.5.1",
    "httpx>=0.28.1",
    "geopandas>=1.1.3",
    "pyarrow>=24.0.0",
    "zarr>=3.1.6",
    "loguru>=0.7.3",
]
lint = [
    "ruff>=0.15.10",
]
typecheck = [
    "ty>=0.0.30",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.3",
    "mkdocs-jupyter>=0.26.2",
    "jupytext>=1.19.1",
    "ipykernel>=7.2.0",
    # matplotlib + watermark used by the example notebooks during local
    # re-execution. The guarded watermark cell in each notebook no-ops
    # if the package is missing, but installing it here lets the version
    # readout actually print under `nbconvert --execute`.
    "matplotlib>=3.8",
    "watermark>=2.6.0",
    # pygments 2.20.0 dropped the None -> '' coercion for HtmlFormatter(filename=...),
    # but pymdownx.highlight 10.21.x still passes the untitled-code-block title
    # through as None. Pin until a fixed pymdown-extensions release ships (#38).
    "pygments>=2.19,<2.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xr_toolz"]

[tool.ruff]
target-version = "py312"
line-length = 88
# Executed Jupyter notebooks are committed as output artefacts; don't
# lint them — they were authored-and-executed pairs and re-editing
# cell source would invalidate the inline outputs.
extend-exclude = ["docs/notebooks/*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    "E402", "E721", "E731", "E741",
    # Physics/math docstrings legitimately use Greek letters,
    # en-dashes, minus signs, and similar Unicode. Suppress the
    # ambiguous-character warnings that would force us to ASCII-ify
    # every equation.
    "RUF002", "RUF003",
]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
# xarray's public API is typed with tight Literal[...] unions (e.g.
# method=Literal["linear", "nearest", ...]) that don't compose with the
# string parameters we forward from our wrappers. The runtime behaviour
# is correct; silence the overload/argument noise from these false
# positives so ty can still surface genuine issues elsewhere.
invalid-argument-type = "warn"
no-matching-overload = "warn"
unresolved-attribute = "warn"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/xr_toolz --cov-report=term-missing --cov-report=xml:coverage.xml"

[tool.coverage.run]
source = ["src/xr_toolz"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
